--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,8 @@
             ],
             "styles": [
   "node_modules/bootstrap/dist/css/bootstrap.min.css",
-  "src/styles.css"
+  "src/styles.css",
+  "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
 ],
 "scripts": [
   "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
@@ -101,8 +102,7 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
-            ],
+              }],
             "styles": [
               "src/styles.css"
             ],
